Enhance README and improve styling for resume site
- Expanded README with features, deployment instructions, and development notes.
- Updated CSS file paths for assets.
- Improved SCSS styles for better readability and aesthetics.
- Added transition effects and hover states for links.
- Adjusted color variables for a modern look.
- Included new assets for images and documents.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet">
+    <link href="assets/css/resume.min.css" rel="stylesheet">
     <style>
         div.gallery {
             margin: 5px;
@@ -58,7 +58,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"> <span class="d-block d-lg-none">Rafayet
                 Hossain</span> <span class="d-none d-lg-block">
-                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Rafayet DP.png" alt="">
+                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/images/Rafayet DP.png" alt="Portrait of Rafayet Hossain, IT Business Analyst & Project Manager">
             </span> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span
@@ -302,7 +302,7 @@
                 <div class="gallery">
 
                     <a class="" target="_blank" href="https://sundarbantourism.bforest.gov.bd/bn">
-                        <img src="img/rivu.jpg" alt="Rivu" width="300" height="200">
+                        <img src="assets/images/rivu.jpg" alt="Rivu" width="300" height="200">
                     </a> <br>
                     <a class="w3-button w3-teal w3-center" target="_blank"
                         href="https://sundarbantourism.bforest.gov.bd/bn"> View
@@ -369,7 +369,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
 
-            <a href="img/Rafayet_BSA_SQA.pdf" class="w3-button w3-light-green w3-padding-large w3-section">
+            <a href="assets/images/Rafayet_BSA_SQA.pdf" class="w3-button w3-light-green w3-padding-large w3-section">
                 <i class="fa fa-download"></i> Download Resume
             </a>
 
@@ -383,12 +383,9 @@
 
     </div>
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
+    <script src="assets/js/resume.min.js"></script>
     <script>
         window.fbAsyncInit = function () {
             FB.init({
