Update print styles and navigation for improved usability and accessibility

--- a/index.html
+++ b/index.html
@@ -41,17 +41,15 @@
       <a href="#education">Education</a>
       <a href="#certifications">Certifications</a>
       <a href="#awards">Awards</a>
-      <a href="assets/images/Rafayet_BSA_SQA.pdf" class="download-btn" download style="margin:0;">Resume PDF</a>
+      <a href="#" class="download-btn print-btn" onclick="window.print();return false;" title="Print or Save as PDF" aria-label="Print or Save Resume as PDF"><i class="fa fa-print" aria-hidden="true"></i></a>
+      <a href="assets/images/Rafayet_BSA_SQA.pdf" class="download-btn" download style="margin:0;"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>
     </nav>
-    <div class="social-links">
-      <a href="https://www.linkedin.com/in/rafayethossain" aria-label="LinkedIn" target="_blank"><i
-          class="fa fa-linkedin"></i></a>
-      <a href="https://www.facebook.com/rafayethossain13" aria-label="Facebook" target="_blank"><i
-          class="fa fa-facebook"></i></a>
-      <a href="https://www.twitter.com/rafayethossain" aria-label="Twitter" target="_blank"><i
-          class="fa fa-twitter"></i></a>
-      <a href="https://github.com/rafayet13" aria-label="GitHub" target="_blank"><i class="fa fa-github"></i>
-      </a>
+    <div class="nav-footer-social" style="display:flex;justify-content:center;gap:1.1rem;margin-top:1.2rem;">
+      <a href="mailto:rafayet14@gmail.com" aria-label="Email" title="Email"><i class="fa fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/rafayethossain" aria-label="LinkedIn" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+      <a href="https://github.com/rafayet13" aria-label="GitHub" target="_blank" title="GitHub"><i class="fa fa-github"></i></a>
+      <a href="https://www.facebook.com/rafayethossain13" aria-label="Facebook" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a>
+      <a href="https://www.twitter.com/rafayethossain" aria-label="Twitter" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a>
     </div>
   </aside>
   <main class="main-content">
